# SPOB

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  bgp.cmake  bgq.cmake  config.h.in
src/: Ack.proto  AckRecover.proto  AckTree.proto  Commit.proto  Entry.proto  Messages.cpp  Messages.hpp  Propose.proto  ReconnectResponse.proto  RecoverPropose.proto  Spob.h  Spob.hpp  SpobConfig.h.in  StateMachine.cc  StateMachine.cpp
src/spob/: AckTree.proto  ConstructTree.proto  Entry.proto  NakTree.proto  Propose.proto  Reconnect.proto  ReconnectResponse.proto  RecoverCommit.proto  RecoverPropose.proto  RecoverReconnect.proto  StateMachine.cpp
src/test/: test.cpp
src/test/reproducible/: Communicator.cpp  Communicator.hpp  Coroutine.cpp  Coroutine.hpp  FailureDetector.cpp  FailureDetector.hpp  Message.cpp  Message.hpp  test.cpp
test/: CMakeLists.txt  PrimaryConstructionTest.cpp  TestCommunicator.cpp  TestCommunicator.hpp  UnitTest.cc
test/mpi/: CMakeLists.txt  Communicator.cpp  Communicator.hpp  LatencyTest.cpp  ThroughputTest.cpp  test.cc  test.cpp
test/reproducible/: CMakeLists.txt  Communicator.cc  Communicator.cpp  Communicator.h  Communicator.hpp  Coroutine.cc  Coroutine.h  FailureDetector.cc  FailureDetector.h  Message.cc  Message.h  Process.cpp  Process.hpp  ReproducibleTest.hpp  test.cc  test.cpp
